# haul-pave

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  SCOPE.md  haulpave-project-plan-v3.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  notion-sync.yml  notion-sync.yml.disabled  publish.yml
.playwright-mcp/: page-2026-05-20T16-29-31-717Z.yml  page-2026-05-20T16-31-11-049Z.yml
docs/: index.md
docs/api/: cli.md  economics.md  models.md  pavement.md  reporting.md  traffic.md  utils.md  vehicle_registry.md
docs/methodology/: curve-encoding.md
examples/: 01_basic_pavement_design.py  02_trh14_vs_usace_comparison.py  03_economics_scenario.py
src/haulpave/: __init__.py
src/haulpave/analysis/: __init__.py  sensitivity.py
src/haulpave/cli/: __init__.py  main.py
src/haulpave/design/: __init__.py
src/haulpave/design/curves/: README.md  trh14_catalog_v1.json  usace_cbr_v1.json  usace_cbr_v1.meta.yaml
src/haulpave/economics/: __init__.py  compare.py  engine.py  export.py
src/haulpave/material_library/: __init__.py
src/haulpave/models/: __init__.py  economics.py  material.py  pavement.py  traffic.py  vehicle.py
src/haulpave/pavement/: __init__.py  compare.py  trh14.py
src/haulpave/reporting/: __init__.py  summary.py
src/haulpave/traffic/: __init__.py  cesa.py  coverages.py
src/haulpave/utils/: __init__.py  interpolation.py  units.py
src/haulpave/vehicle_registry/: __init__.py
tests/: conftest.py  test_imports.py  test_material_library.py  test_vehicle_registry.py
tests/benchmarks/: README.md  __init__.py  bench_01_cesa_hand_calc.py  bench_02_coverages_hand_calc.py  bench_03_cbr_usace_example.py  bench_04_published_case.py  bench_05_trh14_hand_calc.py  bench_06_economics_compare.py  bench_07_sensitivity_hand_calc.py
tests/benchmarks/reference_data/: bench_01_expected.json  bench_02_expected.json  bench_03_expected.json  bench_04_expected.json  bench_05_expected.json  bench_06_expected.json  sources.md
tests/test_analysis/: test_sensitivity.py
tests/test_cli/: test_main.py
tests/test_economics/: test_compare.py  test_engine.py  test_export.py
tests/test_models/: test_economics.py  test_material.py  test_pavement.py  test_traffic.py  test_vehicle.py
tests/test_pavement/: test_bridge_adapters.py  test_compare.py  test_design.py  test_trh14.py
tests/test_reporting/: test_summary.py
tests/test_traffic/: test_cesa.py  test_coverages.py
tests/test_utils/: test_interpolation.py  test_units.py
