[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "haulpave"
version = "0.1.0"
description = "Open-source pavement structure and operating-cost analysis toolkit for mine haul roads"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26",
    "scipy>=1.12",
    "typer>=0.12",
    "rich>=13.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
]
docs = [
    "mkdocs-material>=9.5",
]

[project.scripts]
haulpave = "haulpave.cli.main:app"

[project.urls]
Homepage = "https://github.com/rachmad-jenss/haul-pave"
Repository = "https://github.com/rachmad-jenss/haul-pave"

[tool.hatch.build.targets.wheel]
packages = ["src/haulpave"]

# ---------------------------------------------------------------------------
# Ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "N"]
ignore = [
    "N999",  # module name with dash — not applicable for src layout
]

[tool.ruff.lint.isort]
known-first-party = ["haulpave"]

# ---------------------------------------------------------------------------
# Mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.10"
strict = true
mypy_path = "src"

[[tool.mypy.overrides]]
module = ["numpy.*", "scipy.*"]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
# Coverage flags are passed explicitly in CI (see .github/workflows/ci.yml).
# This prevents addopts from applying --cov-fail-under to benchmark-only runs
# (which collect 0 items and have no coverage data, causing a spurious failure).

[tool.coverage.run]
source = ["haulpave"]
omit = ["*/haulpave/cli/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
